{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 218,
  "lineage": "6475a927-a219-c48f-37c8-f92848663cee",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp_firewall1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "3389",
                  "443",
                  "8983",
                  "8984"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-06T03:01:22.996-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fanpoc-automation-310113/global/firewalls/firewall",
            "log_config": [],
            "name": "firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/networks/gcpmigration",
            "priority": 1000,
            "project": "fanpoc-automation-310113",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/firewalls/firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp_firewall2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8983",
                  "80",
                  "443",
                  "8080",
                  "8984",
                  "1433",
                  "6378",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-06T03:01:22.818-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fanpoc-automation-310113/global/firewalls/firewallpri",
            "log_config": [],
            "name": "firewallpri",
            "network": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/networks/gcpmigration",
            "priority": 1000,
            "project": "fanpoc-automation-310113",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/firewalls/firewallpri",
            "source_ranges": [
              "172.31.3.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2019-dc-v20210810",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/zones/europe-west2-a/disks/jump"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fanpoc-automation-310113/zones/europe-west2-a/instances/jump",
            "instance_id": "4529900056095513061",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata_fingerprint": "J5-nV21NHNA=",
            "name": "jump",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.179.140",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/networks/gcpmigration",
                "network_ip": "172.31.2.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/regions/europe-west2/subnetworks/subnetpub",
                "subnetwork_project": "fanpoc-automation-310113"
              }
            ],
            "project": "fanpoc-automation-310113",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/zones/europe-west2-a/instances/jump",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "europe-west2-a"
          },
          "dependencies": [
            "google_compute_network.gcp_vpc",
            "google_compute_subnetwork.gcp_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gcp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/fanpoc-automation-310113/global/networks/gcpmigration",
            "mtu": 0,
            "name": "gcpmigration",
            "project": "fanpoc-automation-310113",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/networks/gcpmigration"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "gcp_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/fanpoc-automation-310113/global/routes/route",
            "name": "route",
            "network": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/networks/gcpmigration",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "fanpoc-automation-310113",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/routes/route",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gcp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gcp_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-06T03:01:23.409-07:00",
            "gateway_address": "172.31.2.1",
            "id": "projects/fanpoc-automation-310113/regions/europe-west2/subnetworks/subnetpub",
            "ip_cidr_range": "172.31.2.0/24",
            "name": "subnetpub",
            "network": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/networks/gcpmigration",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fanpoc-automation-310113",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/regions/europe-west2/subnetworks/subnetpub"
          },
          "dependencies": [
            "google_compute_network.gcp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gcp_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-09-06T03:01:23.177-07:00",
            "gateway_address": "172.31.3.1",
            "id": "projects/fanpoc-automation-310113/regions/europe-west2/subnetworks/subnetpri",
            "ip_cidr_range": "172.31.3.0/24",
            "name": "subnetpri",
            "network": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/global/networks/gcpmigration",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fanpoc-automation-310113",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fanpoc-automation-310113/regions/europe-west2/subnetworks/subnetpri"
          },
          "dependencies": [
            "google_compute_network.gcp_vpc"
          ]
        }
      ]
    }
  ]
}